# searoute_mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mcp.json  mkdocs.yml  pyproject.toml  requirements.txt
&&/: pyvenv.cfg
.github/workflows/: ci.yml
docs/: api.md  examples.md  index.md
mcp_server/: main.py  tools.py
source/: pyvenv.cfg
tests/: test_basic.py  test_routes.py
